# blupimania2-android

./: .gitignore  CMakeLists.txt  LICENSE-HEADER.txt  PRIVACY.md  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/blupi/blupimania2/: BlupiActivity.java
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
port/compat/: compat.cpp  d3d.h  d3denum.h  d3dframe.h  d3dutil.cpp  ddraw.h  dinput.h  direct.h  dsound.h  io.h  mmsystem.h  shlobj.h  tchar.h  windows.h
port/gl/: glapi.cpp  glapi.h  gldevice.cpp
port/sdl/: androidboot.cpp  sdlapp.cpp  sdljoystick.cpp  sdlsound.cpp  sdltextr.cpp
src/: Copie de taskgoto.cpp  array.cpp  array.h  auto.cpp  auto.h  autocatapult.cpp  autocatapult.h  autodock.cpp  autodock.h  autodoor.cpp  autodoor.h  autofiole.cpp  autofiole.h  autoflash.cpp  autoflash.h  autogoal.cpp  autogoal.h  autojostle.cpp  autojostle.h  autolift.cpp  autolift.h  automax1x.cpp  automax1x.h  automeca.cpp  automeca.h  autoscrap.cpp  autoscrap.h  blitz.cpp  blitz.h  button.cpp  button.h  camera.cpp  camera.h  cbottoken.cpp  cbottoken.h  check.cpp  check.h  classfile.cpp  cloud.cpp  cloud.h  (+185 more)
src/CBot/: CBot.cpp  CBot.h  CBotAddExpr.cpp  CBotClass.cpp  CBotCompExpr.cpp  CBotDll.h  CBotFunction.cpp  CBotIf.cpp  CBotProgram.cpp  CBotStack.cpp  CBotString.cpp  CBotToken.cpp  CBotToken.h  CBotTwoOpExpr ordre inversé.cpp  CBotTwoOpExpr.cpp  CBotVar.cpp  CBotWhile.cpp  ClassFILE.cpp  Copie de CBotTwoOpExpr.cpp  StringFunctions.cpp  old CBotAddExpr.cpp  old CBotCompExpr.cpp  resource.h
src/CBot/TestCBot/: CBotConsoleDlg.cpp  CBotConsoleDlg.h  ChildFrm.cpp  ChildFrm.h  MainFrm.cpp  MainFrm.h  PerformDlg.cpp  PerformDlg.h  Routines.cpp  StdAfx.cpp  StdAfx.h  TestCBot.cpp  TestCBot.h  TestCBotDoc.cpp  TestCBotDoc.h  TestCBotView.cpp  TestCBotView.h  resource.h
src/CBot/old TstCBot/: BotConsoleDlg.cpp  BotConsoleDlg.h  BotErrorDlg.cpp  BotErrorDlg.h  CMyThread.cpp  CMyThread.h  MainFrm.cpp  MainFrm.h  Resource.h  StdAfx.cpp  StdAfx.h  TstCBot.cpp  TstCBot.h  TstCBotDoc.cpp  TstCBotDoc.h  TstCBotView.cpp  TstCBotView.h
